--- a/classComposer/package.json
+++ b/classComposer/package.json
@@ -17,6 +17,7 @@
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
     "bootstrap": "~3.3.5",
-    "async": "~1.5.0"
+    "async": "~1.5.0",
+    "chartjs": "~0.2.4"
   }
 }
